[project]
name = "xai-twilio"
version = "0.1.0"
description = "A Xircuits component library for Twilio services!"
authors = [{ name = "XpressAI", email = "eduardo@xpress.ai" }]
license = "MIT"
readme = "README.md"
repository = "https://github.com/XpressAI/xai-twilio"
keywords = ["xircuits", "twilio", "sms", "whatsapp", "voice"]

# Xircuits-specific configurations
[tool.xircuits]
requirements_path = "requirements.txt"
#default_example_path = "examples/SendSMSExample.xircuits" #TODO
